--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link href="../styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../output.css" />
+    <link href="../src/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../src/output.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
